# even_odd

./: Cargo.toml  LICENSE  README.md
benches/: even_odd_benchmark.rs
src/: even_odd.wgsl  lib.rs
